# sqlpen

./: .gitignore  12.0.0  LICENSE  README.md  __init__.py  __main__.py  cli.py  config.py  config.yml  df_tosql.py  oracle_issue.md  peek.py  peek_test.py  pen.py  pipeline.py  pipeline_runner.py  pyproject.toml  q-dev-chat-2026-04-17.md  requirements.txt  scratch_test.py  sqlpen.bat  sqlsql.bat  table_metadata.json  test.py  test_df_tosql_harness.db  test_mssql_batch.yml
aligner/: __init__.py  analyze.py  coercion.py  ddl_plan.py  engine.py  execute.py  mapping.py  models.py  outliers.py  plan.md  policies.py  reflect.py  router.py  type_system.py
archive/: scleton_df_tosql.md  table_metadata.json  test_batch.db  test_df_tosql_harness.db  verification.db
crud/: README.md  __init__.py  executor.py  normalize.py  sanitize.py  schema.py  types.py  validate.py
csv/: active_radio_alarm.csv  clac_vamos_exec.csv  command.csv  ctg script.csv  edge_case.csv  lat_long_may_2024.xlsx  link.csv  quota.csv  simple_oracle.csv  sql_query_return.csv  vamos_calculated_values.csv  vamos_current.csv  vamos_exec_command.csv  vamos_exec_log.csv
docs/: cli.md  harness.md  peek.md  pipeline.md
misc/: __init__.py  engine_manager.py  schema_corrector.py  schema_manager.py
monitors/: __init__.py  oracle_monitor.py
pipeline/: __init__.py  csv_harness.py  csvdog.py  df_tosql.py  dict_tosql.py
sql_generator/: __init__.py  common.py  mssql.py  mysql.py  oracle.py  postgres.py  router.py  sql_capture.py  sqlite.py  tracker.py  where_build.py
tests/: README.md  __init__.py  conftest.py  (+18 more)
(+30 files in other folders)
