# SqlPen packaging configuration (PEP 621 compliant)
# This adds installability via `pip install .` without altering source layout.

[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlpen"
version = "0.1.0"
description = "Hardened ETL and Schema-Aware CRUD Engine for multi-dialect SQL."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "SqlPen authors", email = "maintainers@example.com"}
]
requires-python = ">=3.8"
keywords = ["etl", "sql", "pandas", "crud", "database"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]

# Core runtime dependencies
dependencies = [
    "pandas>=1.4",
    "SQLAlchemy>=1.4",
    "click>=8.0",
    "PyYAML>=6.0",
    "tqdm>=4.0"
]

[project.optional-dependencies]
# Development / CI extras
dev = [
    "pytest",
    "hypothesis",
    "pre-commit",
    "black",
    "mkdocs-material",
]

[project.scripts]
# Expose `sqlpen` CLI entry-point
sqlpen = "SqlPen.cli:main"
sqlpen-ui = "SqlPen.cli:interactive"

[tool.setuptools]
package-dir = {"SqlPen" = "."}
